--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Pizza Legends</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="game-container">
+      <canvas class="game-canvas" width="352" height="192"></canvas>
+    </div>
+
+    <script src="/Overworld.js"></script>
+    <script src="/init.js"></script>
   </body>
 </html>
