add language and start of readme file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <title>Pizza Legends</title>
     <link rel="stylesheet" href="style.css">
